--- a/phone_store/wishlist/templates/wishlist/wishlist.html
+++ b/phone_store/wishlist/templates/wishlist/wishlist.html
@@ -12,6 +12,7 @@
         </div>
     </div>
     <!-- cart start -->
+    {% if wishlist.wishlist %}
     <div class="cart-main-area pt-110 pb-70">
         <div class="container">
             <div class="row">
@@ -36,13 +37,22 @@
                                         {% for product in wishlist %}
                                         <tr>
                                             <td class="product-remove">
-                                                <a href="#"><i class=" ti-close "></i></a>
+                                                <a href="{% url 'del_wishlist' product.id %}">
+                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                         fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                                                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"></path>
+                                                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"></path>
+                                                    </svg>
+                                                </a>
                                             </td>
                                             <td class="product-img">
-                                                <a href="#"><img src="{{product.product.image.url}}" alt="" style="width:80%"></a>
+                                                <a href="#"><img src="{{product.product.image.url}}" alt=""
+                                                                 style="width:80%"></a>
                                             </td>
-                                            <td class="product-name"><a href="#" style="font-size: 14px;">{{product.product.name}} </a></td>
-                                            <td class="product-price"><span class="amount">₽{{product.price_discount}}</span></td>
+                                            <td class="product-name"><a href="#" style="font-size: 14px;">{{product.product.name}} </a>
+                                            </td>
+                                            <td class="product-price"><span
+                                                    class="amount">₽{{product.price_discount}}</span></td>
                                             <td style="width: 100px">
                                                 <span> {{product.get_memory_display}}</span>
                                             </td>
@@ -62,6 +72,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
     <!-- cart end -->
     {% include 'footer.html' %}
 </div>
