--- a/phone_store/wishlist/templates/wishlist/wishlist.html
+++ b/phone_store/wishlist/templates/wishlist/wishlist.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <!-- cart start -->
-    {% if wishlist.wishlist %}
+    {% if wishlist %}
     <div class="cart-main-area pt-110 pb-70">
         <div class="container">
             <div class="row">
