--- a/phone_store/users/templates/user/register.html
+++ b/phone_store/users/templates/user/register.html
@@ -15,34 +15,38 @@
             <div class="row">
                 <div class="col-lg-6 col-md-8 ml-auto mr-auto">
 
-                  <div class="login-register-wrap">
-                    <h3>
+                    <div class="login-register-wrap">
+                        <h3>
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                                  class="bi bi-person-circle" viewBox="0 0 16 16">
                                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                                 <path fill-rule="evenodd"
                                       d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                             </svg>
-                        <a href="{% url 'login' %}">Login</a>
+                            <a href="{% url 'login' %}">Login</a>
                             <span style="padding-left: 10px;">Register</span>
                         </h3>
-                    <div class="login-register-form register-form-wrap">
-                      <form action="" method="post">
-                        {% for i in form %}
-                        <div class="sin-login-register">
-                          {{i}}
+                        <div class="login-register-form">
+                            <form action="" method="post">
+                                {% csrf_token %}
+                                {% for i in form %}
+                                <div class="sin-login-register">
+                                    <span style="color: #cc0000;">{{i.errors}}</span>
+                                    {{i}}
+                                </div>
+                                {% endfor %}
+                                <div class="login-register-btn">
+                                    <button class="login" type="submit">Register</button>
+                                </div>
+                            </form>
                         </div>
-                        {% endfor %}
-                        <div class="login-register-btn">
-                          <button class="login" type="submit">Register</button>
-                        </div>
-                      </form>
                     </div>
-                  </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     {% include 'footer.html' %}
 </div>
