--- a/phone_store/users/templates/user/password-reset.html
+++ b/phone_store/users/templates/user/password-reset.html
@@ -37,16 +37,11 @@
                                 </div>
                                 {% endfor %}
                                 <div class="login-register-btn">
-                                    <button class="login" type="submit">Login</button>
-                                    <button class="login-fb" type="submit">Login with Facebook</button>
-                                </div>
-                                <div class="remember-lost-wrap">
+                                    <button class="login" type="submit">RESET</button>
 
-                                    <div class="lost-wrap">
-                                        <a href="{% url 'password_reset' %}">Forget your password?</a>
-                                    </div>
                                 </div>
                             </form>
+<!--                            <input type="text" name="user-name" placeholder="User name or email address *">-->
                         </div>
                     </div>
                 </div>
