--- a/phone_store/users/templates/user/password_reset_done.html
+++ b/phone_store/users/templates/user/password_reset_done.html
@@ -26,27 +26,9 @@
                             <a href="{% url 'register' %}" style="padding-left: 10px;">Register</a>
                         </h3>
                         <div class="login-register-form">
-                            {% for error in form.non_field_errors %}
-                            <span style="padding: 20px;color: #cc0000;">{{error}}</span>
-                            {% endfor %}
-                            <form action="" method="post">
-                                {% csrf_token %}
-                                {% for i in form %}
-                                <div class="sin-login-register">
-                                    {{i}}
-                                </div>
-                                {% endfor %}
-                                <div class="login-register-btn">
-                                    <button class="login" type="submit">Login</button>
-                                    <button class="login-fb" type="submit">Login with Facebook</button>
-                                </div>
-                                <div class="remember-lost-wrap">
+                            <p>Gfhjkm c,hjity yf gjxne</p>
 
-                                    <div class="lost-wrap">
-                                        <a href="{% url 'password_reset' %}">Forget your password?</a>
-                                    </div>
-                                </div>
-                            </form>
+                            <!--                            <input type="text" name="user-name" placeholder="User name or email address *">-->
                         </div>
                     </div>
                 </div>
