--- a/phone_store/users/templates/user/password-reset.html
+++ b/phone_store/users/templates/user/password-reset.html
@@ -5,7 +5,8 @@
         <div class="container-fluid">
             <div class="breadcrumb-content text-center">
                 <div class="breadcrumb-title">
-                    <h2>Login / Register</h2>
+                    <h2>
+                        PASSWORD RESET</h2>
                 </div>
             </div>
         </div>
@@ -41,7 +42,7 @@
 
                                 </div>
                             </form>
-<!--                            <input type="text" name="user-name" placeholder="User name or email address *">-->
+                            <!--                            <input type="text" name="user-name" placeholder="User name or email address *">-->
                         </div>
                     </div>
                 </div>
