--- a/phone_store/users/templates/user/password_reset_done.html
+++ b/phone_store/users/templates/user/password_reset_done.html
@@ -26,7 +26,7 @@
                             <a href="{% url 'register' %}" style="padding-left: 10px;">Register</a>
                         </h3>
                         <div class="login-register-form">
-                            <p>Gfhjkm c,hjity yf gjxne</p>
+                            <p>A link for a new password has been sent to the specified...</p>
 
                             <!--                            <input type="text" name="user-name" placeholder="User name or email address *">-->
                         </div>
