--- a/phone_store/users/templates/user/password_reset_complete.html
+++ b/phone_store/users/templates/user/password_reset_complete.html
@@ -27,7 +27,7 @@
                         </h3>
                         <div class="login-register-form">
                             <p>Поздравляем! Вы успешно изменили пароль своего аккаунта. Используйте его для
-                                <a href="{% url 'login' %}">входа в систему</a>.</p>
+                                <a href="{% url 'login' %}" style="color: #e26405;">входа в систему</a>.</p>
 
                             <!--                            <input type="text" name="user-name" placeholder="User name or email address *">-->
                         </div>
