--- a/phone_store/users/templates/user/password_reset_confirm.html
+++ b/phone_store/users/templates/user/password_reset_confirm.html
@@ -26,6 +26,7 @@
                             <a href="{% url 'register' %}" style="padding-left: 10px;">Register</a>
                         </h3>
                         <div class="login-register-form">
+
                             {% for error in form.non_field_errors %}
                             <span style="padding: 20px;color: #cc0000;">{{error}}</span>
                             {% endfor %}
@@ -33,6 +34,7 @@
                                 {% csrf_token %}
                                 {% for i in form %}
                                 <div class="sin-login-register">
+                                    <span style="color: #cc0000;">{{i.errors}}</span>
                                     {{i}}
                                 </div>
                                 {% endfor %}
