--- a/phone_store/store/templates/product_header_content.html
+++ b/phone_store/store/templates/product_header_content.html
@@ -63,7 +63,6 @@
                     </div>
                     <div class="review-rating" style="padding-left: 10px;">
                         {% for i in item.rating|range %}
-                        <!--                        <i class="yellow fa fa-star"></i>-->
                         <svg  style="color:#e78631" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                              class="bi bi-star-fill" viewBox="0 0 16 16">
                             <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
@@ -91,7 +90,10 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-md-6">
-                        {{form.rating}}
+                        {{form.rating}}<svg  style="color:#e78631" xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"
+                             class="bi bi-star-fill" viewBox="0 0 16 16">
+                            <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                        </svg>
                         <div class="rating-form-style mb-20">
                             <label>Your Review <span>*</span></label>
                             {{form.comment}}
