--- a/phone_store/cart/templates/cart/cart.html
+++ b/phone_store/cart/templates/cart/cart.html
@@ -107,7 +107,7 @@
                                         </ul>
                                     </div>
                                     <div class="grand-btn">
-                                        <a href="#">Proceed to checkout</a>
+                                        <a href="{% url 'order' %}">Proceed to checkout</a>
                                     </div>
                                 </div>
                             </div>
