--- a/phone_store/store/templates/store/product-details.html
+++ b/phone_store/store/templates/store/product-details.html
@@ -41,7 +41,10 @@
                                 <div class="pro-dec-stock">
                                     <ul>
                                         <li>Brand: <span>{{product.manufacture.name}}</span></li>
+                                        {% if prod.active %}
                                         <li class="green">In Stock</li>
+                                        {% endif %}
+
                                         <li>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                  fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
@@ -61,6 +64,7 @@
                                     <span>Color</span>
                                     <ul>
                                         {% for item in color_product|distinct:'color' %}
+
                                         {% if color == item.color|lower %}
                                         <li><a href="{{product.get_absolute_url}}?color={{item}}"><span
                                                 title="{{item}}"
@@ -95,6 +99,7 @@
                                 </div>
                             </div>
                             <div class="product-details-action-wrap pro-dec-action-mrg">
+                                {% if prod.active %}
                                 <form action="{% url 'cart_add' product.id product.slug %}?color={{color}}&memory={{memory}}"
                                       method="post">
                                     {% csrf_token %}
@@ -107,13 +112,15 @@
                                 </form>
 
                                 <div class="product-details-wishlist">
-                                    <a title="Add to wishlist" href="{% url 'add_wishlist' prod.id %}?wis=wishlist" class="a-wishlist">
+                                    <a title="Add to wishlist" href="{% url 'add_wishlist' prod.id %}?wis=wishlist"
+                                       class="a-wishlist">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                              fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                                             <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
                                         </svg>
                                     </a>
                                 </div>
+                                {% endif %}
                             </div>
                             <div class="product-details-meta">
                                 <span>SKU: N/A</span>
