--- a/phone_store/order/templates/order/checkout.html
+++ b/phone_store/order/templates/order/checkout.html
@@ -13,6 +13,11 @@
     <div class="checkout-main-area pt-90 pb-90">
         <div class="container">
             <div class="checkout-wrap pt-30">
+                {% if messages %}
+                {% for i in messages %}
+                <p class="{{i.tags}}">{{i}}</p>
+                {% endfor %}
+                {% endif %}
                 <form action="" method="post">
                     {% csrf_token %}
                     <div class="row">
@@ -24,8 +29,8 @@
                                     <div class="col-lg-12">
                                         <div class="billing-info mb-20">
                                             {{item.label}}
-<!--                                            <label>First Name <abbr class="required" title="required">*</abbr></label>-->
-<!--                                            <input type="text">-->
+                                            <!--                                            <label>First Name <abbr class="required" title="required">*</abbr></label>-->
+                                            <!--                                            <input type="text">-->
                                             {{item}}
                                         </div>
                                     </div>
@@ -51,7 +56,7 @@
                                             <ul>
 
                                                 {% for i in cart %}
-                                                <li>{{i.name}}   X {{i.quantity}} <span>₽ {{i.price}}</span></li>
+                                                <li>{{i.name}} X {{i.quantity}} <span>₽ {{i.price}}</span></li>
                                                 {% endfor %}
                                             </ul>
                                         </div>
