--- a/phone_store/payment/templates/payment/completed.html
+++ b/phone_store/payment/templates/payment/completed.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+<div class="main-wrapper">
+    <div class="breadcrumb-area section-padding-1 bg-gray breadcrumb-ptb-1">
+        <div class="container-fluid">
+            <div class="breadcrumb-content text-center">
+                <div class="breadcrumb-title">
+                    <h1>Your payment was successful</h1>
+                    <p>Your payment has been processed successfully.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% include 'footer.html' %}
+
+
+</div>
+{% endblock %}
