--- a/phone_store/payment/templates/payment/process.html
+++ b/phone_store/payment/templates/payment/process.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <form action="{% url 'cart_coupon' %}" method="post">
+                    <form action="" method="post">
                         {% csrf_token %}
                         <div class="row">
                             <div class="col-lg-8">
