--- a/phone_store/store/templates/product_header.html
+++ b/phone_store/store/templates/product_header.html
@@ -9,12 +9,13 @@
 <a data-toggle="tab" href="{{product.get_absolute_url}}?prod-header=additional-information" class="">ADDITIONAL INFORMATION</a>
 {% endif %}
 {% if prod_header == 'reviews' %}
-<a data-toggle="tab" href="#des-details3" class="active disabled">Reviews (1)</a>
+<a data-toggle="tab" href="#des-details3" class="active disabled">Reviews ({{product.comments.count}})</a>
 {% else %}
-<a data-toggle="tab" href="{{product.get_absolute_url}}?prod-header=reviews" class="">Reviews (1)</a>
+<a data-toggle="tab" href="{{product.get_absolute_url}}?prod-header=reviews" class="">Reviews ({{product.comments.count}})</a>
 {% endif %}
 {% if prod_header == 'about-brand' %}
 <a data-toggle="tab" href="#des-details5" class="active disabled"> ABOUT BRAND</a>
 {% else %}
 <a data-toggle="tab" href="{{product.get_absolute_url}}?prod-header=about-brand" class=""> ABOUT BRAND</a>
 {% endif %}
+
